js/js.translator/testData/incremental/invalidationWithPL/removeClassUsedFromConsumer/lib1/l1.0.kt
package sample

open class Foo {
    open fun value(): Int = 0
}
